log
Wed 27 Mar 2024 11:01:05 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f9b8a8c
Wed 27 Mar 2024 11:03:44 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:21: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   44 |     if(list == NULL)return;
      |                     ^~~~~~
list.c:42:8: note: declared here
   42 | void * firstList(List * list)
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8182c26
Wed 27 Mar 2024 11:04:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bf3ab2e
